LiveText-LiveText3.14/src/objects/ITR_Message__c.object
<CustomObject>
    <description>Inbound Messages for ITR</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with this interaction</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Agents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Send_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Campaign Send Member.</description>
        <inlineHelpText>Lookup to the Campaign Send Member.</inlineHelpText>
        <label>Campaign Send Member</label>
        <referenceTo>Campaign_Send_Member__c</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case associated with this interaction</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact associated with this interaction</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formatted_Originating_Number__c</fullName>
        <formula>Originating_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Originating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Transcript__c</fullName>
        <description>HTML transcript for this interaction</description>
        <label>HTML Transcript</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ITR_Context__c</fullName>
        <description>Context for this ITR interaction</description>
        <label>ITR Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Within_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the current message was received during business hours</description>
        <label>Is Within Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Text_Session_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified Text Session Header</label>
        <referenceTo>Conversation_Header__c</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead associated with this interaction</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>LiveText Number associated with this interaction</description>
        <label>LiveText Number</label>
        <referenceTo>LiveText_Number__c</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message associated with this interaction</description>
        <label>Message</label>
        <length>480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mo_Message_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MO Message Counter is incremented by 1 every time a Mobile Originated message is received by the ITR.</description>
        <inlineHelpText>MO Message Counter is incremented by 1 every time a Mobile Originated message is received by the ITR.</inlineHelpText>
        <label>Mo Message Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with this interaction</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ITR Messages</relationshipLabel>
        <relationshipName>ITR_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_In_Status__c</fullName>
        <description>Opt-in status at time of this interaction</description>
        <label>Opt-In Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Number__c</fullName>
        <description>Originating phone number for this interaction</description>
        <label>Originating Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Omni-Channel Queue to route this interaction to</description>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Transcript__c</fullName>
        <description>Text transcript for this interaction</description>
        <label>Text Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ITR Message</label>
    <nameField>
        <label>ITR Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITR Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>